--- a/templates/prospect/prospectBoard/login.html.twig
+++ b/templates/prospect/prospectBoard/login.html.twig
@@ -8,7 +8,7 @@
             <div class="col-md-offset-4 col-md-5">
     {{ form_start(form) }}
     {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+    <button class="btn">{{ button_label|default('Envoyer') }}</button>
     {{ form_end(form) }}
             </div>
         </div>
