Modification label prospectlogin

--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -1,33 +1,24 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div class="container-fluid bg-info">
-        <div class="row">
 
-            <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow col-xs-12 bg-light">
+    <div class="container-fluid">
+        <div class="row dashboard-header">
+
+            <nav class="navbar navbar-expand navbar-light bg-white topbar static-top shadow col-xs-12 dashboard-header">
 
                 <!-- Sidebar Toggle (Topbar) -->
                 <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
                     <i class="fa fa-bars"></i>
                 </button>
 
-                <!-- Topbar Search -->
-                <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
-                    <div class="input-group">
-                        <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..."
-                               aria-label="Search" aria-describedby="basic-addon2">
-                        <div class="input-group-append">
-                            <button class="btn btn-primary" type="button">
-                                <i class="fa fa-search fa-sm"></i>
-                            </button>
-                        </div>
-                    </div>
-                </form>
+                <a class="navbar-brand" href="#">Dashboard</a>
 
                 <!-- Topbar Navbar -->
                 <ul class="navbar-nav ml-auto">
 
                     <!-- Nav Item - Search Dropdown (Visible Only XS) -->
+
                     <li class="nav-item dropdown no-arrow d-sm-none">
                         <a class="nav-link dropdown-toggle" href="#" id="searchDropdown" role="button"
                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -49,6 +40,11 @@
                                 </div>
                             </form>
                         </div>
+                    </li>
+                    <li class="nav-item dropdown no-arrow mx-1">
+                        <a class="nav-link" href="{{ path('default') }}">
+                            <span class="badge badge-danger badge-counter">Accueil</span>
+                        </a>
                     </li>
 
                     <!-- Nav Item - Alerts -->
@@ -74,6 +70,7 @@
                             </a>
                         </div>
                     </li>
+
 
 
                         <li class="nav-item dropdown no-arrow">
@@ -115,39 +112,14 @@
             </nav>
         </div>
         <div class="row main-user">
-            <div class="col-md-2 bg-warning">
+            <div class="col-md-2 bg-dark">
                 <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
-                    <!-- Sidebar - Brand -->
-                    <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
-                        <div class="sidebar-brand-icon rotate-n-15">
-                            <i class="fa fa-laugh-wink"></i>
-                        </div>
-                        <div class="sidebar-brand-text mx-3">SB Admin <sup>2</sup></div>
-                    </a>
-
-                    <!-- Divider -->
-                    <hr class="sidebar-divider my-0">
-
-                    <!-- Nav Item - Dashboard -->
-                    <li class="nav-item active">
-                        <a class="nav-link" href="index.html">
-                            <i class="fa fa-fw fa-tachometer-alt"></i>
-                            <span>Dashboard</span></a>
-                    </li>
-
-                    <!-- Divider -->
-                    <hr class="sidebar-divider">
-
-                    <!-- Heading -->
-                    <div class="sidebar-heading">
-                        Interface
-                    </div>
 
                     <!-- Nav Item - Pages Collapse Menu -->
 
                     <div class="dropdown">
-                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2"
+                        <button class="btn btn-secondary dropdown-toggle mt-5" type="button" id="dropdownMenu2"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Devis
                         </button>
@@ -161,7 +133,7 @@
 
                     <!-- Nav Item - Utilities Collapse Menu -->
                     <div class="dropdown">
-                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2"
+                        <button class="btn btn-secondary dropdown-toggle mt-5" type="button" id="dropdownMenu2"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Factures
                         </button>
@@ -174,7 +146,7 @@
 
                 </ul>
             </div>
-            <div class="col-md-10 bg-primary">
+            <div class="col-md-10 bg-light">
                 {% if user is defined %}
                 <div class="container">
                     <div class="row">
