--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -96,7 +96,14 @@ ul {
   list-style: none;
 }
 
+/**DASHBOARD**/
 
+.dashboard-header{
+  background: rgb(255,255,255);
+  background: linear-gradient(180deg, rgba(255,255,255,1) 7%, rgba(255,127,0,0.8519782913165266) 95%);
+  border: none;
+
+}
 
 
 
