--- a/templates/agency/new.html.twig
+++ b/templates/agency/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('agency/_form.html.twig') }}
 
-    <a href="{{ path('agency_index') }}">back to list</a>
+    <a href="{{ path('agency_index') }}">Retour</a>
 {% endblock %}
