--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -135,6 +135,16 @@
                     <div class="dropdown">
                         <button class="btn btn-secondary dropdown-toggle mt-5" type="button" id="dropdownMenu2"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Agences
+                        </button>
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
+                            <button class="dropdown-item" type="button"><a href="{{ path('agency_index') }}">Voir les agences</a></button></button>
+                            <button class="dropdown-item" type="button"><a href="{{ path('agency_new') }}">Ajouter</a></button>
+                        </div>
+                    </div>
+                    <div class="dropdown">
+                        <button class="btn btn-secondary dropdown-toggle mt-5" type="button" id="dropdownMenu2"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Factures
                         </button>
                         <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
