--- a/templates/prospect/_form.html.twig
+++ b/templates/prospect/_form.html.twig
@@ -1,4 +1,14 @@
-{{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}<a href="{{ path('prospect_new') }}"></a></button>
-{{ form_end(form) }}
+{% form_theme form 'bootstrap_4_layout.html.twig' %}
+
+    {{ form_start(form) }}
+
+    {{ form_row(form.lastName,{ 'label': 'Nom' }) }}
+    {{ form_row(form.firstName,{ 'label': 'Prénom' }) }}
+    {{ form_row(form.birthdate,{ 'label': 'Date de naissance' }) }}
+    {{ form_row(form.email,{ 'label': 'email' }) }}
+    {{ form_row(form.phoneNumber,{ 'label': 'Numéro téléphone/portable' }) }}
+    {{ form_row(form.city,{ 'label': 'Ville'}) }}
+
+    <button class="btn btn-danger">{{ button_label|default('Envoyer') }}</button>
+    {{ form_end(form) }}
+
