--- a/templates/prospect/index.html.twig
+++ b/templates/prospect/index.html.twig
@@ -1,47 +1,7 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Prospect index{% endblock %}
+{% block title %}Error{% endblock %}
 
 {% block body %}
-    <h1>Prospect index</h1>
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>LastName</th>
-                <th>FirstName</th>
-                <th>Birthdate</th>
-                <th>Email</th>
-                <th>PhoneNumber</th>
-                <th>Guid</th>
-                <th>CreatedAt</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for prospect in prospects %}
-            <tr>
-                <td>{{ prospect.id }}</td>
-                <td>{{ prospect.lastName }}</td>
-                <td>{{ prospect.firstName }}</td>
-                <td>{{ prospect.birthdate ? prospect.birthdate|date('Y-m-d') : '' }}</td>
-                <td>{{ prospect.email }}</td>
-                <td>{{ prospect.phoneNumber }}</td>
-                <td>{{ prospect.guid }}</td>
-                <td>{{ prospect.createdAt ? prospect.createdAt|date('Y-m-d H:i:s') : '' }}</td>
-                <td>
-                    <a href="{{ path('prospect_show', {'id': prospect.id}) }}">show</a>
-                    <a href="{{ path('prospect_edit', {'id': prospect.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="9">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-
-    <a href="{{ path('prospect_new') }}">Create new</a>
 {% endblock %}
