--- a/templates/prospect/new.html.twig
+++ b/templates/prospect/new.html.twig
@@ -3,10 +3,13 @@
 {% block title %}New Prospect{% endblock %}
 
 {% block body %}
-    <h1>Create new Prospect</h1>
+
+    <div class="container">
+
+    <h1>Vos coordonnées</h1>
 
     {{ include('prospect/_form.html.twig') }}
 
-    <a href="{{ path('prospect_index') }}">back to list</a>
-
+    <a href="{{ path('default') }}">back to list</a>
+    </div>
 {% endblock %}
